@@ -95,9 +95,9 @@ bulk_extractor_nomain = \
 	word_and_context_list.h \
 	$(bulk_scanners) $(TSK3INCS)  $(BE13_API) $(DFXML_WRITER) 
 
-bulk_extractor_SOURCES = $(bulk_extractor_nomain) main.cpp
+bulk_extractor_SOURCES = $(bulk_extractor_nomain) main.cpp bulk_extractor_api.cpp
 
-bulk_extractorlib_SOURCES = $(bulk_extractor_nomain)
+bulk_extractorlib_SOURCES = $(bulk_extractor_nomain) bulk_extractor_api.cpp
 
 bulk_extractor.so: $(bulk_extractorlib_OBJECTS)
 	$(CXX) -shared -fPIC -o $@ $(LDFLAGS) $(LIBS) $(bulk_extractorlib_OBJECTS)
