@@ -28,10 +28,6 @@
  *** COMMAND LINE OPTIONS
  ****************************************************************/
 
-// Global options that can be set without using the option system
-
-int      opt_silent= 0;
-
 /* Global find options and the find_list */
 
 FindOptsStruct FindOpts;         // singleton
@@ -112,39 +108,3 @@ scanner_t *scanners_builtin[] = {
     0};
 
 
-/* Here is the bulk_extractor API
- * It is under development.
- */
-struct BEFILE_t {
-    int fd;
-};
-
-typedef struct BEFILE_t BEFILE;
-typedef int be_callback(int32_t flag,
-                        uint32_t arg,
-                        const char *feature_recorder_name,
-                        const char *feature,size_t feature_len,
-                        const char *context,size_t context_len);
-
-
-extern "C" {
-    BEFILE *bulk_extractor_open()
-    {
-        BEFILE *bef = (BEFILE *)calloc(1,sizeof(*bef));
-        return bef;
-    }
-    
-    int bulk_extractor_analyze_buf(BEFILE *bef,be_callback cb,uint8_t *buf,size_t buflen)
-    {
-        cb(0,1,"name","feature",7,"context",7);
-        return 0;
-    }
-    
-    int bulk_extractor_close(BEFILE *bef)
-    {
-        free(bef);
-        return 0;
-    }
-}
-
-    
